# ReCoDE-DeepLearning-Best-Practices

./: 404.html  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml
_static/: custom.css
configs/: eval.yaml  inference.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/datamodule/: default.yaml  fashion_mnist_datamodule.yaml
configs/logger/: wandb.yaml
configs/model/: classification_model.yaml  defaults.yaml
configs/model/net/: conv_net.yaml  dense_net.yaml
configs/model/optimizer/: adamw.yaml  lion.yaml
configs/trainer/: default.yaml
docs/: conf.py  index.rst
docs/learning/: Additional_Best_Practices.md  Install_as_package.md  Learn_template_tricks.md  Learning_about_einops.ipynb  Learning_about_hydra.ipynb  Learning_about_lightning.ipynb  QuickStart.md  Starting_a_new_project.md
docs/source/: conf.py  index.rst
learning/: Best_Practices.md  Learning_about_eniops.ipynb  Learning_about_lightning.ipynb  QuickStart.md  hydra_example.yaml
learning/Additional_Best_Practices/: index.html
learning/Install_as_package/: index.html
learning/Learn_template_tricks/: index.html
learning/Learning_about_einops/: index.html
learning/Learning_about_hydra/: index.html
learning/Learning_about_lightning/: index.html
learning/QuickStart/: index.html
learning/Starting_a_new_project/: index.html
search/: search_index.json
src/: eval.py  inference.py  train.py
src/datamodules/: fashion_mnist_datamodule.py  template_datamodule.py
src/datamodules/components/: fashion_mnist_dataset.py
src/models/: classification_model.py  template_module.py
src/models/components/: conv_net.py  dense_net.py
src/models/components/nets/: conv_net.py  dense_net.py
src/utils/: torch_utils.py  utils.py
